--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "shop4less": {
+    "projeto-angular-ecommerce": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/shop4less",
+            "outputPath": "dist/projeto-angular-ecommerce",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -69,18 +69,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "shop4less:build"
+            "browserTarget": "projeto-angular-ecommerce:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "shop4less:build:production"
+              "browserTarget": "projeto-angular-ecommerce:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "shop4less:build"
+            "browserTarget": "projeto-angular-ecommerce:build"
           }
         },
         "test": {
@@ -118,15 +118,15 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "shop4less:serve"
+            "devServerTarget": "projeto-angular-ecommerce:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "shop4less:serve:production"
+              "devServerTarget": "projeto-angular-ecommerce:serve:production"
             }
           }
         }
       }
     }},
-  "defaultProject": "shop4less"
+  "defaultProject": "projeto-angular-ecommerce"
 }
