Deploy github via pasta docs e json-server publicado

--- a/angular.json
+++ b/angular.json
@@ -27,12 +27,10 @@
               "src/styles.css",
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css"
-
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
               "node_modules/bootstrap/dist/js/bootstrap.min.js"
-
             ]
           },
           "configurations": {
@@ -125,8 +123,13 @@
               "devServerTarget": "projeto-angular-ecommerce:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy",
+          "options": {}
         }
       }
-    }},
+    }
+  },
   "defaultProject": "projeto-angular-ecommerce"
 }
